[tool.poetry]
name = "python-lab-bdd"
version = "0.1.0"
description = ""
authors = ["Billie Thompson <billie.thompson@armakuni.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
pylint = "^2.7.4"
pytest = "^6.2.2"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
